// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectAccount Component Complete Workflow should render complete workflow with all selections 1`] = `
<div>
  <div
    class="ms-Stack selectAccountContainer css-109"
  >
    <span>
      Select your source account and subscription
    </span>
    <div
      data-selected="sub-1"
      data-testid="subscription-dropdown"
    >
      <div
        data-testid="subscription-option-sub-1"
      >
        Test Subscription 1
      </div>
      <div
        data-testid="subscription-option-sub-2"
      >
        Test Subscription 2
      </div>
    </div>
    <div
      data-disabled="false"
      data-selected="/subscriptions/sub-1/resourceGroups/rg-1/providers/Microsoft.DocumentDB/databaseAccounts/account-1"
      data-testid="account-dropdown"
    >
      <div
        data-testid="account-option-/subscriptions/sub-1/resourceGroups/rg-1/providers/Microsoft.DocumentDB/databaseAccounts/account-1"
      >
        test-cosmos-account-1
      </div>
    </div>
    <div
      data-checked="false"
      data-testid="migration-type-checkbox"
    >
      <input
        data-testid="migration-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`SelectAccount Component Edge Cases should handle empty accounts array 1`] = `
<div>
  <div
    class="ms-Stack selectAccountContainer css-109"
  >
    <span>
      Select your source account and subscription
    </span>
    <div
      data-testid="subscription-dropdown"
    >
      <div
        data-testid="subscription-option-sub-1"
      >
        Test Subscription 1
      </div>
      <div
        data-testid="subscription-option-sub-2"
      >
        Test Subscription 2
      </div>
    </div>
    <div
      data-disabled="true"
      data-testid="account-dropdown"
    />
    <div
      data-checked="true"
      data-testid="migration-type-checkbox"
    >
      <input
        checked=""
        data-testid="migration-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`SelectAccount Component Edge Cases should handle empty subscriptions array 1`] = `
<div>
  <div
    class="ms-Stack selectAccountContainer css-109"
  >
    <span>
      Select your source account and subscription
    </span>
    <div
      data-testid="subscription-dropdown"
    />
    <div
      data-disabled="true"
      data-testid="account-dropdown"
    />
    <div
      data-checked="true"
      data-testid="migration-type-checkbox"
    >
      <input
        checked=""
        data-testid="migration-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`SelectAccount Component Edge Cases should handle null account in context 1`] = `
<div>
  <div
    class="ms-Stack selectAccountContainer css-109"
  >
    <span>
      Select your source account and subscription
    </span>
    <div
      data-testid="subscription-dropdown"
    >
      <div
        data-testid="subscription-option-sub-1"
      >
        Test Subscription 1
      </div>
      <div
        data-testid="subscription-option-sub-2"
      >
        Test Subscription 2
      </div>
    </div>
    <div
      data-disabled="true"
      data-testid="account-dropdown"
    >
      <div
        data-testid="account-option-/subscriptions/sub-1/resourceGroups/rg-1/providers/Microsoft.DocumentDB/databaseAccounts/account-1"
      >
        test-cosmos-account-1
      </div>
    </div>
    <div
      data-checked="true"
      data-testid="migration-type-checkbox"
    >
      <input
        checked=""
        data-testid="migration-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`SelectAccount Component Edge Cases should handle null subscription in context 1`] = `
<div>
  <div
    class="ms-Stack selectAccountContainer css-109"
  >
    <span>
      Select your source account and subscription
    </span>
    <div
      data-testid="subscription-dropdown"
    >
      <div
        data-testid="subscription-option-sub-1"
      >
        Test Subscription 1
      </div>
      <div
        data-testid="subscription-option-sub-2"
      >
        Test Subscription 2
      </div>
    </div>
    <div
      data-disabled="true"
      data-testid="account-dropdown"
    >
      <div
        data-testid="account-option-/subscriptions/sub-1/resourceGroups/rg-1/providers/Microsoft.DocumentDB/databaseAccounts/account-1"
      >
        test-cosmos-account-1
      </div>
    </div>
    <div
      data-checked="true"
      data-testid="migration-type-checkbox"
    >
      <input
        checked=""
        data-testid="migration-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`SelectAccount Component Edge Cases should handle undefined accounts from hook 1`] = `
<div>
  <div
    class="ms-Stack selectAccountContainer css-109"
  >
    <span>
      Select your source account and subscription
    </span>
    <div
      data-testid="subscription-dropdown"
    >
      <div
        data-testid="subscription-option-sub-1"
      >
        Test Subscription 1
      </div>
      <div
        data-testid="subscription-option-sub-2"
      >
        Test Subscription 2
      </div>
    </div>
    <div
      data-disabled="true"
      data-testid="account-dropdown"
    />
    <div
      data-checked="true"
      data-testid="migration-type-checkbox"
    >
      <input
        checked=""
        data-testid="migration-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`SelectAccount Component Edge Cases should handle undefined subscriptions from hook 1`] = `
<div>
  <div
    class="ms-Stack selectAccountContainer css-109"
  >
    <span>
      Select your source account and subscription
    </span>
    <div
      data-testid="subscription-dropdown"
    />
    <div
      data-disabled="true"
      data-testid="account-dropdown"
    />
    <div
      data-checked="true"
      data-testid="migration-type-checkbox"
    >
      <input
        checked=""
        data-testid="migration-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`SelectAccount Component Rendering should render component with default state 1`] = `
<div>
  <div
    class="ms-Stack selectAccountContainer css-109"
  >
    <span>
      Select your source account and subscription
    </span>
    <div
      data-testid="subscription-dropdown"
    >
      <div
        data-testid="subscription-option-sub-1"
      >
        Test Subscription 1
      </div>
      <div
        data-testid="subscription-option-sub-2"
      >
        Test Subscription 2
      </div>
    </div>
    <div
      data-disabled="true"
      data-testid="account-dropdown"
    >
      <div
        data-testid="account-option-/subscriptions/sub-1/resourceGroups/rg-1/providers/Microsoft.DocumentDB/databaseAccounts/account-1"
      >
        test-cosmos-account-1
      </div>
    </div>
    <div
      data-checked="true"
      data-testid="migration-type-checkbox"
    >
      <input
        checked=""
        data-testid="migration-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`SelectAccount Component Rendering should render with offline migration type checked 1`] = `
<div>
  <div
    class="ms-Stack selectAccountContainer css-109"
  >
    <span>
      Select your source account and subscription
    </span>
    <div
      data-testid="subscription-dropdown"
    >
      <div
        data-testid="subscription-option-sub-1"
      >
        Test Subscription 1
      </div>
      <div
        data-testid="subscription-option-sub-2"
      >
        Test Subscription 2
      </div>
    </div>
    <div
      data-disabled="true"
      data-testid="account-dropdown"
    >
      <div
        data-testid="account-option-/subscriptions/sub-1/resourceGroups/rg-1/providers/Microsoft.DocumentDB/databaseAccounts/account-1"
      >
        test-cosmos-account-1
      </div>
    </div>
    <div
      data-checked="true"
      data-testid="migration-type-checkbox"
    >
      <input
        checked=""
        data-testid="migration-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`SelectAccount Component Rendering should render with online migration type unchecked 1`] = `
<div>
  <div
    class="ms-Stack selectAccountContainer css-109"
  >
    <span>
      Select your source account and subscription
    </span>
    <div
      data-testid="subscription-dropdown"
    >
      <div
        data-testid="subscription-option-sub-1"
      >
        Test Subscription 1
      </div>
      <div
        data-testid="subscription-option-sub-2"
      >
        Test Subscription 2
      </div>
    </div>
    <div
      data-disabled="true"
      data-testid="account-dropdown"
    >
      <div
        data-testid="account-option-/subscriptions/sub-1/resourceGroups/rg-1/providers/Microsoft.DocumentDB/databaseAccounts/account-1"
      >
        test-cosmos-account-1
      </div>
    </div>
    <div
      data-checked="false"
      data-testid="migration-type-checkbox"
    >
      <input
        data-testid="migration-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`SelectAccount Component Rendering should render with selected account 1`] = `
<div>
  <div
    class="ms-Stack selectAccountContainer css-109"
  >
    <span>
      Select your source account and subscription
    </span>
    <div
      data-selected="sub-1"
      data-testid="subscription-dropdown"
    >
      <div
        data-testid="subscription-option-sub-1"
      >
        Test Subscription 1
      </div>
      <div
        data-testid="subscription-option-sub-2"
      >
        Test Subscription 2
      </div>
    </div>
    <div
      data-disabled="false"
      data-selected="/subscriptions/sub-1/resourceGroups/rg-1/providers/Microsoft.DocumentDB/databaseAccounts/account-1"
      data-testid="account-dropdown"
    >
      <div
        data-testid="account-option-/subscriptions/sub-1/resourceGroups/rg-1/providers/Microsoft.DocumentDB/databaseAccounts/account-1"
      >
        test-cosmos-account-1
      </div>
    </div>
    <div
      data-checked="true"
      data-testid="migration-type-checkbox"
    >
      <input
        checked=""
        data-testid="migration-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;

exports[`SelectAccount Component Rendering should render with selected subscription 1`] = `
<div>
  <div
    class="ms-Stack selectAccountContainer css-109"
  >
    <span>
      Select your source account and subscription
    </span>
    <div
      data-selected="sub-1"
      data-testid="subscription-dropdown"
    >
      <div
        data-testid="subscription-option-sub-1"
      >
        Test Subscription 1
      </div>
      <div
        data-testid="subscription-option-sub-2"
      >
        Test Subscription 2
      </div>
    </div>
    <div
      data-disabled="false"
      data-testid="account-dropdown"
    >
      <div
        data-testid="account-option-/subscriptions/sub-1/resourceGroups/rg-1/providers/Microsoft.DocumentDB/databaseAccounts/account-1"
      >
        test-cosmos-account-1
      </div>
    </div>
    <div
      data-checked="true"
      data-testid="migration-type-checkbox"
    >
      <input
        checked=""
        data-testid="migration-checkbox-input"
        type="checkbox"
      />
    </div>
  </div>
</div>
`;
